@@ -1,3 +1,8 @@
+2009-09-21  Jaroslav Hajek  <highegg@gmail.com>
+
+	* python_to_octave.cc (copy_pyarrobj_to_octarray_boot,
+	pyarr_to_octvalue): Support NumPy string arrays.
+
 2009-09-18  Jaroslav Hajek  <highegg@gmail.com>
 
 	* package/pytave.py: Safer check for interactive (mod_wsgi in
